[gd_scene load_steps=7 format=4 uid="uid://bydoracux0cwb"]

[ext_resource type="Script" path="res://Biomes/mothman_biome.gd" id="1_nl7f5"]
[ext_resource type="TileSet" uid="uid://dryeg0hq3owkm" path="res://tilesets/tileset.tres" id="2_1agqv"]
[ext_resource type="PackedScene" uid="uid://cqh0l1qon7lxh" path="res://Scenes/IndividualCare/clickToOpenMenu.tscn" id="4_bouva"]
[ext_resource type="Texture2D" uid="uid://cvpwgppl6wxqu" path="res://image-removebg-preview (15).png" id="5_pmawq"]
[ext_resource type="PackedScene" uid="uid://4x58htctexrd" path="res://mothman.tscn" id="5_t2enx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ko6kl"]
size = Vector2(54, 24)

[node name="MothManBiome" type="Node2D"]
position = Vector2(-192, -160)
script = ExtResource("1_nl7f5")

[node name="Grass" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAgABAAAAAAABAAAAAgACAAAAAAACAAAAAgACAAAAAAADAAAAAgACAAAAAAAEAAAAAgADAAAAAAAAAAEAAgABAAEAAAABAAEAAgACAAEAAAACAAEAAgACAAEAAAADAAEAAgACAAEAAAAEAAEAAgADAAEAAAAAAAIAAgAEAAAAAAABAAIAAgAFAAAAAAACAAIAAgAFAAAAAAADAAIAAgAFAAAAAAAEAAIAAgAGAAAAAAAAAAMAAgAEAAEAAAABAAMAAgAFAAEAAAACAAMAAgAFAAEAAAADAAMAAgAFAAEAAAAEAAMAAgAGAAEAAAAAAAQAAgAEAAEAAAABAAQAAgAFAAEAAAACAAQAAgAFAAEAAAADAAQAAgAFAAEAAAAEAAQAAgAGAAEAAAAAAAUAAgAEAAIAAAABAAUAAgAFAAIAAAACAAUAAgAFAAIAAAADAAUAAgAFAAIAAAAEAAUAAgAGAAIAAAAAAAYAAAALAAwAAAABAAYAAAAMAAwAAAACAAYAAAANAAwAAAADAAYAAAANAAwAAAAEAAYAAAAOAAwAAAAAAAcAAAABAAwAAAABAAcAAAADAAwAAAACAAcAAAAAAAwAAAADAAcAAAANAAwAAAAEAAcAAAAOAAwAAAAAAAgAAAABAAwAAAABAAgAAAACAAsAAAACAAgAAAANAAwAAAADAAgAAAANAAwAAAAEAAgAAAAOAAwAAAAAAAkAAAACAAsAAAABAAkAAAAMAAwAAAACAAkAAAADAAsAAAADAAkAAAANAAwAAAAEAAkAAAAOAAwAAAAAAAoAAAALAAwAAAABAAoAAAAMAAwAAAACAAoAAAANAAwAAAADAAoAAAAOAAwAAAAEAAoAAAALAAwAAAAFAAoAAgAEAAEAAAAGAAoAAgAFAAEAAAAHAAoAAgAFAAEAAAAIAAoAAgAGAAEAAAAJAAoAAAANAAwAAAAKAAoAAAAOAAwAAAALAAoAAAANAAwAAAAMAAoAAAALAAwAAAANAAoAAAALAAwAAAAOAAoAAgAEAAEAAAAKAAkAAAAMAAwAAAALAAkAAAALAAwAAAAMAAkAAAAOAAwAAAANAAkAAAALAAwAAAAOAAkAAgAEAAEAAAAKAAgAAAALAAwAAAALAAgAAAALAAwAAAAMAAgAAAAOAAwAAAANAAgAAAANAAwAAAAOAAgAAgAEAAEAAAAKAAcAAAALAAwAAAALAAcAAAANAAwAAAAMAAcAAAAOAAwAAAANAAcAAAANAAwAAAAOAAcAAgAEAAEAAAAKAAYAAAADAAsAAAALAAYAAAABAAwAAAAMAAYAAAACAAsAAAANAAYAAAANAAwAAAAOAAYAAgAEAAAAAAAKAAUAAAACAAwAAAALAAUAAAACAAsAAAAMAAUAAAAEAAwAAAANAAUAAAANAAwAAAAOAAUAAgABAAEAAAAKAAQAAAAOAAwAAAALAAQAAAANAAwAAAAMAAQAAAAOAAwAAAANAAQAAAANAAwAAAAOAAQAAgABAAEAAAAKAAMAAAAMAAwAAAALAAMAAAANAAwAAAAMAAMAAAAOAAwAAAANAAMAAAANAAwAAAAOAAMAAgABAAEAAAAKAAIAAAAMAAwAAAALAAIAAAANAAwAAAAMAAIAAAAOAAwAAAANAAIAAAANAAwAAAAOAAIAAgABAAAAAAAKAAEAAAALAAwAAAALAAEAAAAMAAwAAAAMAAEAAAANAAwAAAANAAEAAAANAAwAAAAOAAEAAAADAAsAAAAKAAAAAAALAAwAAAALAAAAAAAMAAwAAAAMAAAAAAANAAwAAAANAAAAAAAOAAwAAAAOAAAAAAALAAwAAAAFAAAAAAALAAwAAAAGAAAAAAAMAAwAAAAHAAAAAAANAAwAAAAIAAAAAAAOAAwAAAAJAAAAAAAPAAwAAAAFAAEAAAANAAwAAAAGAAEAAAADAAsAAAAHAAEAAAAAAAwAAAAIAAEAAAACAAwAAAAJAAEAAAAPAAwAAAAFAAIAAAAMAAwAAAAGAAIAAAANAAwAAAAHAAIAAAANAAwAAAAIAAIAAAAOAAwAAAAJAAIAAAALAAwAAAAFAAMAAAANAAwAAAAGAAMAAAALAAwAAAAHAAMAAAAOAAwAAAAIAAMAAAAPAAwAAAAJAAMAAAALAAwAAAAFAAQAAAALAAwAAAAGAAQAAAALAAwAAAAHAAQAAAAOAAwAAAAIAAQAAAAPAAwAAAAJAAQAAAANAAwAAAAFAAUAAAALAAwAAAAGAAUAAAALAAwAAAAHAAUAAAALAAwAAAAIAAUAAAAOAAwAAAAJAAUAAAANAAwAAAAFAAYAAAALAAwAAAAGAAYAAAANAAwAAAAHAAYAAAALAAwAAAAIAAYAAAALAAwAAAAJAAYAAAALAAwAAAAFAAcAAgABAAAAAAAGAAcAAgACAAAAAAAHAAcAAgACAAAAAAAIAAcAAgADAAAAAAAJAAcAAAALAAwAAAAFAAgAAgABAAEAAAAGAAgAAgACAAEAAAAHAAgAAgACAAEAAAAIAAgAAgADAAEAAAAJAAgAAAALAAwAAAAFAAkAAgAEAAAAAAAGAAkAAgAFAAAAAAAHAAkAAgAFAAAAAAAIAAkAAgAGAAAAAAAJAAkAAAALAAwAAAAAAAsAAAALAAwAAAABAAsAAAAMAAwAAAACAAsAAAADAAwAAAADAAsAAAACAAwAAAAEAAsAAAALAAwAAAAAAAwAAAALAAwAAAABAAwAAAAMAAwAAAACAAwAAAANAAwAAAADAAwAAAAOAAwAAAAEAAwAAAALAAwAAAAAAA0AAgABAAAAAAABAA0AAgACAAAAAAACAA0AAgACAAAAAAADAA0AAgADAAAAAAAEAA0AAAANAAwAAAAAAA4AAgABAAEAAAABAA4AAgACAAEAAAACAA4AAgACAAEAAAADAA4AAgADAAEAAAAEAA4AAAANAAwAAAAAAA8AAgABAAEAAAABAA8AAgACAAEAAAACAA8AAgACAAEAAAADAA8AAgADAAEAAAAEAA8AAAANAAwAAAAFAA8AAgAEAAEAAAAGAA8AAgAFAAEAAAAHAA8AAgAFAAEAAAAIAA8AAgAGAAEAAAAJAA8AAAAPAAwAAAAKAA8AAAALAAwAAAALAA8AAAALAAwAAAAMAA8AAAALAAwAAAANAA8AAAAOAAwAAAAOAA8AAAALAAwAAAAKAA4AAAAMAAwAAAALAA4AAAANAAwAAAAMAA4AAAALAAwAAAANAA4AAAALAAwAAAAOAA4AAAALAAwAAAAKAA0AAAAOAAwAAAALAA0AAAANAAwAAAAMAA0AAAAOAAwAAAANAA0AAAALAAwAAAAOAA0AAAAAAAwAAAAKAAwAAAAOAAwAAAALAAwAAAANAAwAAAAMAAwAAAAOAAwAAAANAAwAAAALAAwAAAAOAAwAAAABAAwAAAAKAAsAAAAMAAwAAAALAAsAAAANAAwAAAAMAAsAAAALAAwAAAANAAsAAAALAAwAAAAOAAsAAgAEAAIAAAAFAAsAAgAEAAEAAAAGAAsAAgAFAAEAAAAHAAsAAgAFAAEAAAAIAAsAAgAGAAEAAAAJAAsAAAALAAwAAAAFAAwAAgAEAAEAAAAGAAwAAgAFAAEAAAAHAAwAAgAFAAEAAAAIAAwAAgAGAAEAAAAJAAwAAAANAAwAAAAFAA0AAgAEAAEAAAAGAA0AAgAFAAEAAAAHAA0AAgAFAAEAAAAIAA0AAgAGAAEAAAAJAA0AAAANAAwAAAAFAA4AAgAEAAEAAAAGAA4AAgAFAAEAAAAHAA4AAgAFAAEAAAAIAA4AAgAGAAEAAAAJAA4AAAALAAwAAAAPAAAAAAAMAAwAAAAQAAAAAAANAAwAAAARAAAAAAAOAAwAAAASAAAAAAAPAAwAAAAPAAEAAAABAAwAAAAQAAEAAAACAAsAAAARAAEAAAACAAwAAAASAAEAAAADAAwAAAAPAAIAAgACAAAAAAAQAAIAAgACAAAAAAARAAIAAgACAAAAAAASAAIAAgACAAAAAAAPAA0AAAADAAwAAAAQAA0AAAANAAwAAAARAA0AAAAOAAwAAAASAA0AAAALAAwAAAAPAA4AAAAMAAwAAAAQAA4AAAANAAwAAAARAA4AAAAOAAwAAAASAA4AAAALAAwAAAAPAA8AAAALAAwAAAAQAA8AAAALAAwAAAARAA8AAAALAAwAAAASAA8AAAALAAwAAAAPAAwAAAADAAwAAAAQAAwAAAAOAAwAAAARAAwAAAANAAwAAAASAAwAAAALAAwAAAAPAAsAAgAFAAIAAAAQAAsAAgAFAAIAAAARAAsAAgAFAAIAAAASAAsAAgAFAAIAAAAPAAoAAgAFAAEAAAAQAAoAAgAFAAEAAAARAAoAAgAFAAEAAAASAAoAAgAFAAEAAAAPAAkAAgAFAAEAAAAQAAkAAgAFAAEAAAARAAkAAgAFAAEAAAASAAkAAgAFAAEAAAAPAAgAAgAFAAEAAAAQAAgAAgAFAAEAAAARAAgAAgAFAAEAAAASAAgAAgAFAAEAAAAPAAcAAgAFAAEAAAAQAAcAAgAFAAEAAAARAAcAAgAFAAEAAAASAAcAAgAFAAEAAAAPAAYAAgAFAAAAAAAQAAYAAgAFAAAAAAARAAYAAgAFAAAAAAASAAYAAgAFAAAAAAAPAAUAAgACAAEAAAAQAAUAAgACAAEAAAARAAUAAgACAAEAAAASAAUAAgACAAEAAAAPAAQAAgACAAEAAAAQAAQAAgACAAEAAAARAAQAAgACAAEAAAASAAQAAgACAAEAAAAPAAMAAgACAAEAAAAQAAMAAgACAAEAAAARAAMAAgACAAEAAAASAAMAAgACAAEAAAATAAYAAgAFAAAAAAAUAAYAAgAFAAAAAAAVAAYAAgAFAAAAAAAWAAYAAgAFAAAAAAAXAAYAAgAGAAAAAAATAAAAAAALAAwAAAAUAAAAAAAMAAwAAAAVAAAAAAANAAwAAAAWAAAAAAAOAAwAAAAXAAAAAAAPAAwAAAATAAEAAAALAAwAAAAUAAEAAAAMAAwAAAAVAAEAAAANAAwAAAAWAAEAAAAOAAwAAAAXAAEAAAAPAAwAAAATAAIAAgACAAAAAAAUAAIAAgACAAAAAAAVAAIAAgACAAAAAAAWAAIAAgACAAAAAAAXAAIAAgADAAAAAAATAAMAAgACAAEAAAAUAAMAAgACAAEAAAAVAAMAAgACAAEAAAAWAAMAAgACAAEAAAAXAAMAAgADAAEAAAATAAQAAgACAAEAAAAUAAQAAgACAAEAAAAVAAQAAgACAAEAAAAWAAQAAgACAAEAAAAXAAQAAgADAAEAAAATAAUAAgACAAEAAAAUAAUAAgACAAEAAAAVAAUAAgACAAEAAAAWAAUAAgACAAEAAAAXAAUAAgADAAEAAAATAAcAAgAFAAEAAAAUAAcAAgAFAAEAAAAVAAcAAgAFAAEAAAAWAAcAAgAFAAEAAAAXAAcAAgAGAAEAAAATAAgAAgAFAAEAAAAUAAgAAgAFAAEAAAAVAAgAAgAFAAEAAAAWAAgAAgAFAAEAAAAXAAgAAgAGAAEAAAATAAkAAgAFAAEAAAAUAAkAAgAFAAEAAAAVAAkAAgAFAAEAAAAWAAkAAgAFAAEAAAAXAAkAAgAGAAEAAAATAAoAAgAFAAEAAAAUAAoAAgAFAAEAAAAVAAoAAgAFAAEAAAAWAAoAAgAFAAEAAAAXAAoAAgAGAAEAAAATAAsAAgAFAAIAAAAUAAsAAgAFAAIAAAAVAAsAAgAFAAIAAAAWAAsAAgAFAAIAAAAXAAsAAgAGAAIAAAATAAwAAAALAAwAAAAUAAwAAAAMAAwAAAAVAAwAAAANAAwAAAAWAAwAAAAOAAwAAAAXAAwAAAAPAAwAAAATAA0AAAALAAwAAAAUAA0AAAAMAAwAAAAVAA0AAAANAAwAAAAWAA0AAAAEAAwAAAAXAA0AAAADAAwAAAATAA4AAAALAAwAAAAUAA4AAAAMAAwAAAAVAA4AAAANAAwAAAAWAA4AAAACAAwAAAAXAA4AAAAEAAwAAAATAA8AAAAEAAwAAAAUAA8AAAADAAsAAAAVAA8AAAANAAwAAAAWAA8AAAAOAAwAAAAXAA8AAAAPAAwAAAAAABAAAgAEAAAAAAAAABEAAgAEAAEAAAAAABIAAgAEAAEAAAAAABMAAgAEAAIAAAABABMAAgAFAAIAAAACABMAAgAFAAIAAAADABMAAgAGAAIAAAAEABMAAAAOAAwAAAAFABMAAAAPAAwAAAABABIAAgAFAAEAAAACABIAAgAFAAEAAAADABIAAgAGAAEAAAAEABIAAAALAAwAAAAFABIAAAALAAwAAAAGABIAAAALAAwAAAAHABIAAAALAAwAAAAIABIAAAANAAwAAAAJABIAAAAOAAwAAAAKABIAAAAPAAwAAAAGABMAAAALAAwAAAAHABMAAAAMAAwAAAAIABMAAAANAAwAAAAJABMAAAAOAAwAAAAKABMAAAAPAAwAAAALABMAAAALAAwAAAAMABMAAAAMAAwAAAANABMAAAANAAwAAAAOABMAAAAOAAwAAAAPABMAAAAPAAwAAAAQABMAAAALAAwAAAARABMAAAAMAAwAAAASABMAAAANAAwAAAATABMAAAAOAAwAAAAUABMAAAAPAAwAAAAVABMAAAAEAAwAAAAWABMAAAACAAwAAAAXABMAAAAEAAwAAAAQABIAAAALAAwAAAARABIAAAAMAAwAAAASABIAAAANAAwAAAATABIAAAALAAwAAAAUABIAAAANAAwAAAAQABEAAAADAAsAAAARABEAAAANAAwAAAASABEAAAANAAwAAAATABEAAAANAAwAAAAUABEAAAAMAAwAAAAQABAAAAALAAwAAAARABAAAAALAAwAAAASABAAAAANAAwAAAATABAAAAADAAwAAAAUABAAAAACAAwAAAALABEAAAALAAwAAAAMABEAAAANAAwAAAANABEAAAANAAwAAAAOABEAAAACAAwAAAAPABEAAAADAAwAAAALABAAAAALAAwAAAAMABAAAAAMAAwAAAANABAAAAANAAwAAAAOABAAAAANAAwAAAAPABAAAAALAAwAAAAGABAAAgAFAAEAAAAHABAAAgAFAAEAAAAIABAAAgAGAAEAAAAJABAAAAAOAAwAAAAKABAAAAAPAAwAAAABABAAAgAFAAAAAAACABAAAgAFAAAAAAADABAAAgAGAAAAAAAEABAAAAALAAwAAAAFABAAAgAEAAEAAAABABEAAgAFAAEAAAACABEAAgAFAAEAAAADABEAAgAGAAEAAAAEABEAAAANAAwAAAAFABEAAgAEAAIAAAAGABEAAgAFAAIAAAAHABEAAgAFAAIAAAAIABEAAgAGAAIAAAAJABEAAAALAAwAAAAKABEAAAALAAwAAAALABIAAAANAAwAAAAMABIAAAANAAwAAAANABIAAAANAAwAAAAOABIAAAANAAwAAAAPABIAAAAPAAwAAAAVABAAAAANAAwAAAAWABAAAAAOAAwAAAAXABAAAAAPAAwAAAAVABEAAAANAAwAAAAWABEAAAANAAwAAAAXABEAAAAPAAwAAAAVABIAAAADAAwAAAAWABIAAAABAAwAAAAXABIAAAACAAsAAAA=")
tile_set = ExtResource("2_1agqv")

[node name="Fauna" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAUABEABAAAAAwAAAAUABIABAAAAA0AAAAVABEABAABAAwAAAAVABIABAABAA0AAAAAAAgABAAHAAwAAAABAAcABAAHAAwAAAAWAAAABAAHAAwAAAANAA0ABAAMABAAAAAOAA0ABAANABAAAAAOAA4ABAANABEAAAAOAA8ABAANABEAAAAOABAABAANABEAAAAOABEABAANABEAAAAOABIABAANABIAAAAPAA0ABAAOABAAAAAGABIABAACAAgAAAAGABMABAACAAkAAAAHABIABAADAAgAAAAHABMABAADAAkAAAAHAAEABAACAAgAAAAHAAIABAACAAkAAAAIAAEABAADAAgAAAAIAAIABAADAAkAAAA=")
tile_set = ExtResource("2_1agqv")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Label" type="Label" parent="."]
offset_left = 403.0
offset_top = 138.0
offset_right = 627.0
offset_bottom = 187.0
text = "Click me to open care menu!"

[node name="ClickToOpenMenu" parent="." instance=ExtResource("4_bouva")]
position = Vector2(500, 147)
scale = Vector2(8.01398, -1.01006)

[node name="MothmanCoins" type="Label" parent="."]
offset_left = 17.0
offset_top = -5.0
offset_right = 57.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 20
text = "0"

[node name="Coin" type="Sprite2D" parent="."]
position = Vector2(8, 10)
scale = Vector2(0.07125, 0.0725)
texture = ExtResource("5_pmawq")

[node name="CoinsButton" type="Area2D" parent="."]

[node name="CoinsButtonColl" type="CollisionShape2D" parent="CoinsButton"]
position = Vector2(27, 12)
shape = SubResource("RectangleShape2D_ko6kl")

[node name="Mothman" parent="." instance=ExtResource("5_t2enx")]
position = Vector2(192, 159)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="input_event" from="ClickToOpenMenu" to="." method="_on_click_to_open_menu_input_event"]
[connection signal="body_entered" from="CoinsButton" to="." method="_on_coins_button_body_entered"]
[connection signal="body_exited" from="CoinsButton" to="." method="_on_coins_button_body_exited"]
[connection signal="input_event" from="CoinsButton" to="." method="_on_coins_button_input_event"]
